yml/guestbook.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: guestbook
  name: guestbook
spec:
  replicas: 1
  selector:
    matchLabels:
      app: guestbook
  template:
    metadata:
      labels:
        app: guestbook
    spec:
      containers:
      - image: idletekz/guestbook:latest
        name: guestbook
        ports:
          - name: http-server
            containerPort: 3000
