yml/svc-guestbook.yml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: guestbook
  name: guestbook
spec:
  ports:
  - port: 3000
    protocol: TCP
    targetPort: http-server
  selector:
    app: guestbook
